--- a/redhanded/index.html
+++ b/redhanded/index.html
@@ -4,28 +4,26 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
+    <script>
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Red Handed v1.1 (WEBGL).json", {onProgress: UnityProgress});
+    </script>
     <style>
-      body {
+      body, html {
         margin: 0;
+        padding: 0;
         overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        background-color: #000;
+        width: 100%;
+        height: 100%;
       }
-
       #gameContainer {
         width: 100vw;
         height: 100vh;
       }
     </style>
-    <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebGL.json", {onProgress: UnityProgress});
-    </script>
   </head>
   <body>
     <div id="gameContainer"></div>
